feat: migrate DTOs to response objects and introduce JSON views for models, removing redundant DTOs and mappers.